force-app/main/default/objects/Target_Line__c/Target_Line__c.object-meta.xml
<CustomObject>
    <label>Target Line</label>
    <pluralLabel>Target Lines</pluralLabel>
    <nameField>
        <label>Target Line Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Product or SKU level target breakdown within a Target with quantity and value achievement tracking (MOD-08 Target and Achievement Management)</description>
</CustomObject>