force-app/main/default/objects/Target_Line__c/fields/Achievement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Percent__c</fullName>
    <label>Achievement Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(Target_Value__c = 0, 0, Achievement_Value__c / Target_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>