force-app/main/default/objects/Target_Line__c/fields/Achievement_Qty__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Qty__c</fullName>
    <label>Achievement Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>