force-app/main/default/objects/Target_Line__c/fields/Achievement_Value__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Value__c</fullName>
    <label>Achievement Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>