force-app/main/default/objects/Target_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Target Lines</relationshipLabel>
    <relationshipName>Target_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>