force-app/main/default/objects/Target_Line__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>MasterDetail</type>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Target Lines</relationshipLabel>
    <relationshipName>Target_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>